fixed dark mode height issue

--- a/public/global.css
+++ b/public/global.css
@@ -5,6 +5,7 @@ body {
 }
 * {
   font-family: "Lato", sans-serif;
+  box-sizing: border-box;
 }
 html {
   background: rgba(6, 15, 6);
@@ -13,7 +14,6 @@ body {
   color: #333;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 body::before {
   content: "";
@@ -23,16 +23,36 @@ body::before {
   top: 0;
   bottom: 0;
   z-index: -1;
-  background: linear-gradient(rgba(6, 15, 6, 0.2), rgba(6, 15, 6)),
+  background: linear-gradient(rgba(6, 15, 6, 0.2), #060f06),
     url("./images/blackwhite.jpg");
   display: block;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top left;
-  width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
+}
+.dark {
+  background-color: rgb(0, 0, 0, 0.6);
+  position: relative;
+  transition: 0.75s all linear;
+  z-index: 9997;
+}
+.dark::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: 0.75s all linear;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: top;
+  background-image: url("/images/stars.jpg");
+  z-index: -1;
+  opacity: 0.5;
 }
 :root {
   --main-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1),
